styles/styles.css
* {
  box-sizing: border-box;
}

/*** layout ***/
body {
  text-align: center;
  display: flex;
  width: 100%;
  background-color: black;
  color: white;
}

.panel {
  text-align: left;
  min-height: 100vh;
  width: auto;
}

.list {
  display: flex;
  justify-content: center;
  width: 75%;
}

.wrap {
  display: flex;
  flex-direction: column;
}

.panel div {
  width: 100%;
  padding-left: 1rem;
  padding-right: 1rem;
}

.displayList {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 1rem;
}

/*** buttons ***/
button {
  margin-top: 1rem;
  padding: 0.5rem;
  color: white;
  background-color: black;
  border-radius: 20%;
  border: 3px outset white;
  box-shadow: 0px 15px 45px 0px rgba(2, 85, 229, 0.56);
}

button:hover {
  color: rgb(2, 85, 229);
}

button:active {
  color: yellow;
  border: 3px inset white;
  box-shadow: 15px 15px 45px 15px rgba(2, 85, 229, 0.96);
}

/*** tables ***/
table {
  text-align: center;
  margin-right: 3rem;
  margin-left: 3rem;
}

thead tr {
  background-color: black;
  color: white;
}


td {
  padding-right: 0.5rem;
}

/*** table of current tasks ***/
.tasks {
  border: 2px solid white;
}

.task {
  border-right: 2px solid white;
  border-left: 2px solid white;
  border-bottom: 2px solid white;
  box-shadow: inset 5px 5px 15px 15px rgba(2, 85, 229, 0.66);
}

.completedSubtask {
  color: yellow;
}

/*** table of completed tasks ***/
.completed {
  margin-top: 1rem;
  text-align: center;
}

.completedTasks {
  border-top: 2px solid white;
}

/*** warnings ***/
#message {
  width: 100%;
  text-align: center;
}

.warning {
  color: yellow;
}

h1 {
  font-weight: bold;
  font-size: 4rem;
  text-decoration: underline;
  box-shadow: 15px 15px 45px 15px rgba(2, 85, 229, 0.96);
}

/*** queries ***/
@media screen and (max-width: 768px) {
  .panel {
    width: auto;
  }

  .list {
    width: auto;
  }

}

